--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.8)
 ## CUSTOMISE
 
 # Define the application name and version.
-project (app-template VERSION 1.0.0)
+project (kbioreg VERSION 1.0.0)
 
 ## BUILD
 
